fix(#5): compile error on Java 8